--- a/rro/build.gradle
+++ b/rro/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
         minSdkVersion 17
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -26,4 +26,5 @@ dependencies {
     compile "com.squareup.okhttp3:okhttp:3.4.1"
     compile "com.squareup.okhttp3:okhttp-urlconnection:3.4.1"
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.alibaba:fastjson:1.2.15'
 }
