--- a/rro/build.gradle
+++ b/rro/build.gradle
@@ -20,11 +20,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile "com.squareup.retrofit2:converter-gson:2.1.0"
     compile "com.squareup.okhttp3:okhttp:3.4.1"
     compile "com.squareup.okhttp3:okhttp-urlconnection:3.4.1"
-    compile 'com.google.code.gson:gson:2.4'
     compile 'com.alibaba:fastjson:1.2.15'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
 }
