--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:support-v4:24.0.0'
     compile 'com.android.support:design:24.0.0'
-    compile project(':rro')
+    compile 'com.github.panespanes:RRO:44890e7717'
 }
